deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redditeye
  labels:
    app: redditeye
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redditeye
    spec:
      containers:
        - name: webui
          image: kristianwindsor/redditeye-webui
          ports:
            - containerPort: 80
        - name: backend
          image: kristianwindsor/redditeye-backend
          ports:
            - containerPort: 5000
        - name: db
          image: kristianwindsor/redditeye-db
          ports:
            - containerPort: 3306
        - name: redditapi
          image: kristianwindsor/redditeye-redditapi
