service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redditeye
  labels:
    app: redditeye
spec:
  selector:
    app: redditeye
  ports:
    - name: webui
      port: 80
    - name: backend
      port: 5000
